# laz

./: .gitignore  BUILDING.md  LICENSE  Laz.sln  README.md
.github/workflows/: build.yml  ci.yml  release.yml
native/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CRASH_ANALYSIS.md
native/cmake/: CompilerWarnings.cmake
native/include/: color.h  key_code.h  laz_api.h  laz_api_linux.h  laz_api_macos.h  laz_api_windows.h  mouse_button.h  point.h
native/src/linux/: .clang-tidy  CMakeLists.txt  keyboard.c  keycode.c  keycode.h  layout.c  mouse.c  screen.c  screen_backend.h  xdisplay.c  xdisplay.h
native/src/linux/wayland/: pipewire_capture.c  pipewire_capture.h  portal.c  portal.h  screen_backend_wayland.c
native/src/linux/x11/: screen_backend_x11.c
native/src/mac/: CMakeLists.txt  clipboard.mm  common.mm  keyboard.mm  keycode.h  keycode.mm  layout.mm  mac_common.h  mouse.mm  screen.mm
native/src/windows/: .clang-tidy  CMakeLists.txt  clipboard.c  keyboard.c  keycode.c  keycode.h  mouse.c  screen.c
src/Laz/: AssemblyInfo.cs  Delays.cs  Key.cs  Keyboard.cs  Laz.csproj  Laz.targets  Lazbot.cs  Mouse.cs  MouseButton.cs  Point.cs  Screen.cs
src/Laz.Tests/: BitmapTests.cs  ColorCircleTests.cs  CubicBezierTests.cs  DelayTests.cs  EasingFunctionTests.cs  Laz.Tests.csproj  MouseMoveExtensionTests.cs  TypingExtensionTests.cs  test.runsettings
src/Laz.Tests.UI/: ClipboardTests.cs  DragAndDropTests.cs  KeyboardTests.cs  Laz.Tests.UI.csproj  MouseTests.cs  MultiMonitorTests.cs  Program.cs  Rectangle.cs  ScreenTests.cs
src/Laz.Tests.UI/Infrastructure/: AvaloniaTestApp.cs  AvaloniaTestFixture.cs  DelayedAssertion.cs  DpiConfiguration.cs  MultiMonitorFactAttribute.cs  Platform.cs  RobotTestBase.cs  SkipOnAttribute.cs
src/Laz.Tests/Infrastructure/: CaptureExtensions.cs  ColorCircle.cs
src/Laz.VisualDemo/: App.cs  Laz.VisualDemo.csproj  MainWindow.cs  Program.cs  app.manifest
src/Laz/Extensions/Keyboard/: Layout.cs  LinuxLayout.cs  MacLayout.cs  Modifiers.cs  TypingAction.cs  TypingContext.cs  TypingExtension.cs  WinLayout.cs
src/Laz/Extensions/Mouse/: CubicBezier.cs  EasingFunctions.cs  MouseMoveExtension.cs  MouseMoveFunction.cs  MoveEasingFunction.cs
src/Laz/Native/: Clipboard.cs  Color.cs  LinuxLazbot.cs  MacLazbot.cs  NativeLazbot.cs  Point.cs  WinLazbot.cs
